--- a/tests/selenium/KOALA/Snapshots/delete-snapshot-from-detail-page.html
+++ b/tests/selenium/KOALA/Snapshots/delete-snapshot-from-detail-page.html
@@ -52,6 +52,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//span/a[@id=&quot;table-item-dropdown_${snapshot_id}&quot;]/i</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>//span/a[@id=&quot;table-item-dropdown_${snapshot_id}&quot;]/i</td>
 	<td></td>
@@ -59,6 +64,11 @@
 <tr>
 	<td>clickAt</td>
 	<td>//ul[@id=&quot;item-dropdown_${snapshot_id}&quot;]/li[1]/a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>css=span.button.dropdown</td>
 	<td></td>
 </tr>
 <tr>
@@ -96,7 +106,6 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
