--- a/tests/selenium/KOALA/Instances/verify-instance-is-running.html
+++ b/tests/selenium/KOALA/Instances/verify-instance-is-running.html
@@ -17,6 +17,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>setTimeout</td>
+	<td>120000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>echo</td>
 	<td>Verifies status is &quot;Running&quot; on instance detail page</td>
 	<td></td>
