--- a/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
+++ b/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://10.111.5.53/" />
-<title>verify-volume-status-is-attached-on-lp</title>
+<link rel="selenium.base" href="http://10.111.5.62:8888/" />
+<title>verify-volume-status-is-attached-on-inst-detail-page</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-volume-status-is-attached-on-lp</td></tr>
+<tr><td rowspan="1" colspan="3">verify-volume-status-is-attached-on-inst-detail-page</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -23,7 +23,7 @@
 </tr>
 <tr>
 	<td>setTimeout</td>
-	<td>120000</td>
+	<td>300000</td>
 	<td></td>
 </tr>
 <tr>
@@ -33,17 +33,32 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=resource-menu-storage</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=resource-menu-storage</td>
+	<td>//li[@id='instances-running']/div/div/a/i</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-volumes</td>
+	<td>//li[@id='instances-running']/div/div/a/i</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//a[contains(text(),'${instance_id}')]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//a[contains(text(),'${instance_id}')]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>//dl[@id='instance-subnav']/dd[2]/a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//dl[@id='instance-subnav']/dd[2]/a</td>
 	<td></td>
 </tr>
 <tr>
@@ -52,13 +67,8 @@
 	<td>k</td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]/span</td>
-	<td></td>
-</tr>
-<tr>
 	<td>storeText</td>
-	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]/span</td>
+	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[@class=&quot;footer status attached&quot;]</td>
 	<td>status</td>
 </tr>
 <tr>
@@ -103,12 +113,12 @@
 </tr>
 <tr>
 	<td>pause</td>
-	<td>30000</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]/span</td>
+	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[@class=&quot;footer status attached&quot;]</td>
 	<td>status</td>
 </tr>
 <tr>
@@ -135,16 +145,6 @@
 	<td>endWhile</td>
 	<td></td>
 	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]/span</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertText</td>
-	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]/span</td>
-	<td>attached</td>
 </tr>
 </tbody></table>
 </body>
